More PCB routing experiments

--- a/Proteus/lalamba-valve-2drivers-version.fsproj
+++ b/Proteus/lalamba-valve-2drivers-version.fsproj
@@ -4,8 +4,8 @@
 <!--   Format  : TopoR Project file                    -->
 <!--   Version : 2                                     -->
 <!--   Program : TopoR Lite 7.0.18707                  -->
-<!--   Date    : Wednesday, February 12, 2020          -->
-<!--   Time    : 20:47                                 -->
+<!--   Date    : Friday, February 14, 2020             -->
+<!--   Time    : 17:04                                 -->
 <!--***************************************************-->
 
 <Project>
@@ -13,12 +13,13 @@
    <GUID>{B1D85B6F-332A-4E62-BC12-9918AC0F147B}</GUID>
    <Documents>
       <Section name="PCB" isExpanded="true">
-         <File path=".\lalamba-valve-2drivers-version.fsx" isopened="0" dateChange="2020-02-11 19:05:38"/>
-         <File path=".\lalamba-valve-2drivers-version_2334-20s.fsx" isopened="1" dateChange="2020-02-12 07:29:38"/>
+         <File path=".\lalamba-valve-2drivers-version.fsx" isopened="1" dateChange="2020-02-12 20:44:44"/>
+         <File path=".\lalamba-valve-2drivers-version_2334-20s.fsx" isopened="0" dateChange="2020-02-12 16:01:16"/>
          <File path=".\lalamba-valve-2drivers-version_2908-8s.fsx" isopened="0" dateChange="2020-02-12 07:31:07"/>
       </Section>
       <Section name="AutoRouting" isExpanded="true">
          <File path=".\autoroute_200211190329\lalamba-valve-2drivers-version_1009-0s.fsb" isopened="0" dateChange="2020-02-11 19:03:30"/>
+         <File path=".\autoroute_200214170303\lalamba-valve-2drivers-version_2187-4s.fsb" isopened="0" dateChange="2020-02-14 17:04:22"/>
          <File path=".\autoroute_200211191224\lalamba-valve-2drivers-version_2334-20s.fsb" isopened="0" dateChange="2020-02-11 23:11:59"/>
          <File path=".\autoroute_200211190607\lalamba-valve-2drivers-version_2342-20s.fsb" isopened="0" dateChange="2020-02-11 19:11:17"/>
          <File path=".\autoroute_200211191224\lalamba-valve-2drivers-version_2368-18s.fsb" isopened="0" dateChange="2020-02-11 23:19:30"/>
