Added debug & release build configurations. Logging are now based in DEBUG define. Some more logging added.

--- a/src/nbproject/Makefile-genesis.properties
+++ b/src/nbproject/Makefile-genesis.properties
@@ -1,10 +1,14 @@
 #
-#Sat Apr 11 16:17:39 MSK 2020
-default.Pack.dfplocation=C\:\\mk\\Microchip\\MPLABX\\v5.35\\packs\\Microchip\\ATmega_DFP\\2.1.87
-default.com-microchip-mplab-nbide-toolchainAVR-AVRLanguageToolchain.md5=916981038ce35d3295a1fed630f7998c
-default.languagetoolchain.dir=C\:\\mk\\avr8-gnu-toolchain-win32_x86\\bin
-configurations-xml=7b88364a923bb211675ffa94ad4a9f9d
+#Sun Apr 12 00:05:29 MSK 2020
+release.languagetoolchain.dir=C\:\\mk\\avr8-gnu-toolchain-win32_x86\\bin
+release.com-microchip-mplab-nbide-toolchainAVR-AVRLanguageToolchain.md5=916981038ce35d3295a1fed630f7998c
+conf.ids=debug,release
+release.Pack.dfplocation=C\:\\mk\\Microchip\\MPLABX\\v5.35\\packs\\Microchip\\ATmega_DFP\\2.1.87
+debug.com-microchip-mplab-nbide-toolchainAVR-AVRLanguageToolchain.md5=916981038ce35d3295a1fed630f7998c
+debug.languagetoolchain.dir=C\:\\mk\\avr8-gnu-toolchain-win32_x86\\bin
+configurations-xml=70afcd5ad8e937847046abb83c0cfb9d
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5db0f4d6bbe0ec2a1f1096ccfb9d7ad3
-default.languagetoolchain.version=5.4.0
+debug.Pack.dfplocation=C\:\\mk\\Microchip\\MPLABX\\v5.35\\packs\\Microchip\\ATmega_DFP\\2.1.87
+release.languagetoolchain.version=5.4.0
 host.platform=windows
-conf.ids=default
+debug.languagetoolchain.version=5.4.0
